# tokyo-insight

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
tokyo_insight/: __init__.py  __main__.py  ask.py  config.py  fetch.py  governance.py  index.py  live.py  llm.py  parse.py  refresh.py  router.py
tokyo_insight/routing_pack/: meta.json  routing_pack.jsonl  section_records.npy
tokyo_insight/tests/: test_engine.py
