[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokyo-insight"
version = "0.1.0"
description = "Local-first, citation-grounded civic-RAG engine for 東京都議会 committee records (engine + facts only; ships no minutes text)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Taiko Toeda / MOBIUS" }]
keywords = ["civic-tech", "rag", "tokyo", "assembly", "minutes"]
dependencies = [
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "numpy>=1.23",
]

[project.scripts]
tokyo-insight = "tokyo_insight.__main__:main"

[tool.setuptools]
packages = ["tokyo_insight"]

[tool.setuptools.package-data]
tokyo_insight = ["routing_pack/*"]
